src/components/SectionHeader/style.css
.sectionDiv {
  min-height: 100vh;
  display: flex;
  justify-content: center;
  padding-top: 20px;
}

.infoBlock {
  border-radius: 5px;
  height: auto;
  flex-basis: 75%;
  margin: 12%;
  margin-bottom: 4%;
  background-color: #646c79;
  align-content: center;
}

.internalElements {
  margin: 40px;
}

h1 {
  font-family: "Alfa Slab One", cursive;
  font-size: 300%;
  color: #000000;
  text-shadow: 2px -2px 2px grey;
}

